# RSVPStream

./: CMakeLists.txt  LICENSE  Model_1-20241104-165633.npz  README.md  XGBDIM.py  XGBDIM_GPU_v2.py  channel list.loc.txt  export.py  input_data_gstf.npy  input_data_local.npy  main_XGBDIM_GPU_v2.py  main_XGBDIM_v2.py  main_multi_XGBDIM_GPU_v1.py  model_gstf.rknn  model_local.rknn  multi_XGBDIM_GPU_v1.py
RKNN/: CMakeLists.txt  README.md
RKNN/export/: onnx2rknn.py
RKNN/include/: rknn_model.h
RKNN/src/: rknn_main.cpp  rknn_model.cpp
data/config/: sample_config.json
include/framework/: module.h  pipeline.h  postprocessor.h  preprocessor.h  runner.h  sink.h  source.h
include/utils/: common.h  module_logger.h  module_profiler.h
python/: eeg_preprocess.py  preprocess_tester.py
src/: main.cpp
src/framework/: source.cpp
src/utils/: logger.cpp
tests/: CMakeLists.txt
tests/integration/: test_pipeline.cpp
tests/unit/: test_example.cpp
